# MaterialSwapperFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CommonLibSSE.cmake  CompileShaders.cmake  nuklear.cmake
gui/MaterialSwapperFramework.Gui/: App.axaml  App.axaml.cs  Constants.cs  Converters.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  MaterialSwapperFramework.Gui.csproj  MaterialSwapperFramework.Gui.sln  Program.cs  StaticConverters.cs
gui/MaterialSwapperFramework.Gui.Desktop/: MaterialSwapperFramework.Gui.Desktop.csproj  Program.cs
gui/MaterialSwapperFramework.Gui/Controls/: FormDisplayNode.Designer.cs  FormDisplayNode.cs
gui/MaterialSwapperFramework.Gui/Converters/: ByteArrayConverter.cs  GenderEnumConverter.cs  VectorConverter.cs
gui/MaterialSwapperFramework.Gui/Extensions/: BinaryExtensions.cs  EnumerableExtensions.cs  NifExtensions.cs
gui/MaterialSwapperFramework.Gui/Helpers/: RetryHelpers.cs
gui/MaterialSwapperFramework.Gui/Models/: BGEMFile.cs  BGSMFile.cs  MaterialFileBase.cs  MaterialRecord.cs  MsfConfigJson.cs  MsfProj.cs  NotifyPropertyChanged.cs
gui/MaterialSwapperFramework.Gui/Services/: MaterialService.cs  ModService.cs  ProjectService.cs  StatusService.cs
gui/MaterialSwapperFramework.Gui/ViewModels/: MainViewModel.cs  MainWindowViewModel.cs  MaterialRecordViewModel.cs  ModifyCurrentRecordViewModel.cs  ViewModelBase.cs
gui/MaterialSwapperFramework.Gui/Views/: ConsolidationWizard.axaml  ConsolidationWizard.axaml.cs  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PluginsPickerWindow.axaml  PluginsPickerWindow.axaml.cs  PluginsTxtWindow.axaml  PluginsTxtWindow.axaml.cs
interface/translations/: MSF_english.json
res/: MaterialSwapperFramework.json
res/MaterialSwapperFramework/_conditions/: _sampleCondition.json
res/config/: _template.json  template.json
res/shaders/: ColorBlend.hlsl  TextureBlendPS.hlsl
schemas/: config.json  record.json
scripts/: MSF - Copy All Materials As JSON.pas
scripts/source/: MaterialSwapperFramework.psc
src/: BinaryMaterialReader.cpp  BinaryMaterialReader.h  Conditions.h  Coroutine.h  DirectUI.hpp  EditorIDCache.h  Events.cpp  Events.h  Factories.h  Filesystem.h  FullScreenQuad.h  Helpers.h  Hooks.h  InventoryPlus.h  MaterialCache.cpp  MaterialCache.h  MaterialConfig.h  MaterialFileReader.cpp  MaterialFileReader.h  MaterialHelpers.h  MaterialLoader.h  MaterialPapyrus.cpp  MaterialPapyrus.h  MaterialStream.cpp  MaterialStream.h  MaterialSwapperFrameworkAPI.h  MaterialWriter.cpp  MaterialWriter.h  MathTypes.h  MessageBox.h  ModState.h  NiOverride.h  NifHelpers.h  Options.h  PCH.h  Papyrus.h  Plugin.cpp  Result.h  SIL.hpp  SaveManager.h  (+16 more)
src/CommunityShaders/: BSLightingShaderMaterialPBR.h  CS.h  TruePBR.h
src/Cond/: Conditions.h
src/Conditions/: Condition.h  Conditions.cpp  EvaluationContext.h
src/ENB/: AntTweakBar.h  ENBSeriesAPI.h  ENBSeriesSDK.h
src/Events/: CellEvents.h  EventListener.h  InventoryOpenEvent.h  NiNodeUpdateEvent.h  NiNodeUpdateEvents.h  PapyrusEvent.h  PapyrusEvents.h  PlayerEquipEvent.h  PlayerEvents.h
src/Factories/: ActivatorFactory.h  AddonNodeFactory.h  AmmunitionFactory.h  ArmorFactory.cpp  ArmorFactory.h  ArtObjectFactory.h  BodyPartsFactory.h  BookFactory.h  ClimateFactory.h  ContainerFactory.h  DoorFactory.h  EffectShaderFactory.h  ExplosionFactory.h  Factory.h  FloraFactory.h  FurnitureFactory.h  HazardFactory.h  HeadPartFactory.h  IngestibleFactory.h  IngredientFactory.h  LandscapeFactory.h  LightFactory.h  MiscItemFactory.h  MoveableStaticFactory.h  NPCFactory.cpp  NPCFactory.h  ProjectileFactory.h  ScrollFactory.h  SoulGemFactory.h  StaticFactory.h  TextureSetFactory.h  TreeFactory.h  WaterFactory.h  WeaponFactory.cpp  WeaponFactory.h
src/Graphics/: CDXShaders.h  D3DDevice.h  NifTextureRenderer.h  README.md  ShaderCompile.cpp  ShaderCompile.h  ShaderFactory.cpp  ShaderFactory.h  ShaderManager.h  ShaderResource.cpp  ShaderResource.h  TextureLoader.h  TextureManager.h
src/Hooks/: CacheEditorIDsHook.h  Load3DHook.h  UpdatePlayerHook.h
src/IO/: BinaryMaterialReader.cpp  BinaryMaterialReader.h  JsonMaterialReader.cpp  JsonMaterialReader.h  MaterialLoader.cpp  MaterialLoader.h  MaterialReaderBase.h  MaterialStream.h
src/Models/: MaterialConfig.h  MaterialFileBase.cpp  MaterialFileBase.h  MaterialRecord.h  RGBA.h
src/RE/: BSLightingShaderMaterialDynamic.cpp  BSLightingShaderMaterialDynamic.h  BSTextureSetClone.h  Misc.h  Offset.h
src/Save/: Helpers.h  Save.cpp  Save.h  Types.h  V1.h  V2.h
src/Shaders/: ColorBlend.hlsl  Generated.h
src/UI/: Hooks.cpp  Hooks.h  ImGui_SKSE.h  ImGui_Stylus.h  ImGui_Sugar.h  MainWindow.cpp  MainWindow.h  Router.h  UI.h  UIManager.h
src/UI/Components/: ApplyToNodeComponent.h  MaterialInfoComponent.h
src/UI/ImGui/: UIManagerImpl.h
src/UI/LCUI/: UIManagerImpl.h  d3d11_renderer.h
src/UI/Nuklear/: UIManagerImpl.h  nuklear.h  nuklear_d3d11.h  nuklear_d3d11_pixel_shader.h  nuklear_d3d11_vertex_shader.h
src/UI/Pages/: DebuggerPage.h  HomePage.cpp  HomePage.h  MaterialsPage.cpp  MaterialsPage.h  SettingsPage.cpp  SettingsPage.h
